--- a/IoTHub/IoTHub.csproj
+++ b/IoTHub/IoTHub.csproj
@@ -122,6 +122,8 @@
     <Content Include="Scripts\jquery.signalR-2.1.2.js" />
     <Content Include="Scripts\jquery.signalR-2.1.2.min.js" />
     <None Include="Scripts\_references.js" />
+    <Content Include="Scripts\uptime.js" />
+    <Content Include="Styles\site.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
